// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test CardUser component should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TranslationComponent
    age={36}
    city="New York"
    gender="Male"
    matching={76}
    onClickHandler={[MockFunction]}
    photo={
      Object {
        "thumbnail": Object {
          "medium": "http://via.placeholder.com/250x250",
        },
      }
    }
    resume="foo"
    sharedLinks={24}
    similarity={85}
    size="small"
    strings={
      Object {
        "coincidences": "Coincidences",
        "compatible": "Compatible",
        "similar": "Similar",
      }
    }
    username="JohnDoe"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "age": 36,
      "city": "New York",
      "gender": "Male",
      "locale": undefined,
      "matching": 76,
      "onClickHandler": [MockFunction],
      "photo": Object {
        "thumbnail": Object {
          "medium": "http://via.placeholder.com/250x250",
        },
      },
      "resume": "foo",
      "sharedLinks": 24,
      "similarity": 85,
      "size": "small",
      "strings": Object {
        "coincidences": "Coincidences",
        "compatible": "Compatible",
        "similar": "Similar",
      },
      "username": "JohnDoe",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "age": 36,
        "city": "New York",
        "gender": "Male",
        "locale": undefined,
        "matching": 76,
        "onClickHandler": [MockFunction],
        "photo": Object {
          "thumbnail": Object {
            "medium": "http://via.placeholder.com/250x250",
          },
        },
        "resume": "foo",
        "sharedLinks": 24,
        "similarity": 85,
        "size": "small",
        "strings": Object {
          "coincidences": "Coincidences",
          "compatible": "Compatible",
          "similar": "Similar",
        },
        "username": "JohnDoe",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Test CardUser component should render correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TranslationComponent
    age={30}
    city="New Jersey"
    gender="Female"
    matching={89}
    onClickHandler={[MockFunction]}
    photo={
      Object {
        "thumbnail": Object {
          "medium": "http://via.placeholder.com/250x250",
        },
      }
    }
    resume="bar"
    sharedLinks={101}
    similarity={34}
    size="medium"
    strings={
      Object {
        "coincidences": "Coincidences",
        "compatible": "Compatible",
        "similar": "Similar",
      }
    }
    username="JaneDoe"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "age": 30,
      "city": "New Jersey",
      "gender": "Female",
      "locale": undefined,
      "matching": 89,
      "onClickHandler": [MockFunction],
      "photo": Object {
        "thumbnail": Object {
          "medium": "http://via.placeholder.com/250x250",
        },
      },
      "resume": "bar",
      "sharedLinks": 101,
      "similarity": 34,
      "size": "medium",
      "strings": Object {
        "coincidences": "Coincidences",
        "compatible": "Compatible",
        "similar": "Similar",
      },
      "username": "JaneDoe",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "age": 30,
        "city": "New Jersey",
        "gender": "Female",
        "locale": undefined,
        "matching": 89,
        "onClickHandler": [MockFunction],
        "photo": Object {
          "thumbnail": Object {
            "medium": "http://via.placeholder.com/250x250",
          },
        },
        "resume": "bar",
        "sharedLinks": 101,
        "similarity": 34,
        "size": "medium",
        "strings": Object {
          "coincidences": "Coincidences",
          "compatible": "Compatible",
          "similar": "Similar",
        },
        "username": "JaneDoe",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
